--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,8 +81,7 @@ body {
 
 .form-and-table-container {
     display: grid;
-    grid-template-columns: 25rem auto;
-    gap: 1rem;
+    grid-template-columns: 1fr;
     margin-top: 20px;
 }
 
@@ -525,12 +524,34 @@ main .insights small {
 main .recent-orders {
     margin-top: 2rem;
 }
-main .recent-orders-student {
-    margin-top: 2rem;
-}
+
 main .recent-orders-student {
     margin-top: 0;
+    position: relative;
 }
+.add-button-container {
+    position: absolute;
+    top: 85px;
+    right: 30px;
+    z-index: 100;
+}
+
+#add-new-student {
+    border-radius: var(--border-radius-1);
+    cursor: pointer;
+    padding: 10px 20px;
+    background: var(--color-primary-variant);
+    color: white;
+    transition: all 150ms ease;
+}
+#add-new-student:hover {
+    background-color: var(--color-primary);
+}
+
+#add-new-student:active {
+    background-color: var(--color-primary-variant);
+}
+
 
 main .recent-orders h2 {
     margin-bottom: 0.8rem;
@@ -552,10 +573,41 @@ main .recent-orders-student table {
     background: var(--color-white);
     width: 100%;
     border-radius: var(--card-border-radius);
+    padding-top: 50px !important;
     padding: var(--card-padding);
     text-align: center;
     box-shadow: var(--box-shadow);
     transition: all 300ms ease;
+}
+
+
+.dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter, .dataTables_wrapper .dataTables_info, .dataTables_wrapper .dataTables_processing, .dataTables_wrapper .dataTables_paginate {
+    color: var(--color-dark) !important;
+}
+
+#example_previous,#example_next, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active {
+    color: var(--color-dark) !important;
+}
+
+select {
+    color: var(--color-dark) !important;
+    background: var(--color-white) !important;
+}
+
+input[type="search"]{
+    color: var(--color-dark) !important;
+}
+
+.h2-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 10px;
+    background-color: var(--color-light);
+    margin-bottom: 5px;
+    border-radius: var(--border-radius-3);
+    
 }
 
 main .recent-orders table:hover {
@@ -816,8 +868,11 @@ main table tbody tr td:last-child input, main table tbody tr td:last-child butto
     main .recent-orders table {
         width: 83vw;
     }
+    .h2-container {
+        width: 100% !important;
+    }
     main .recent-orders-student table {
-        width: 83vw;
+        width: 100% !important;
     }
 
     main table thead tr th:nth-last-child(2),
@@ -915,6 +970,9 @@ main table tbody tr td:last-child input, main table tbody tr td:last-child butto
         margin: 0;
     }
 
+    .h2-container {
+        width: 100%;
+    }
     .right {
         width: 94%;
         margin: 0 auto 4rem;
@@ -958,15 +1016,17 @@ main table tbody tr td:last-child input, main table tbody tr td:last-child butto
     }
 }
 
+@media screen and (max-width: 640px) {
+    .add-button-container {
+        top: 115px;
+    }
+}
 
-.h2-container {
+
+.input-field-container {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-top: 10px;
-    background-color: var(--color-light);
-    margin-bottom: 5px;
-    border-radius: var(--border-radius-3);
+    flex-direction: row;
+    gap: 20px;
 }
 
 
