--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,6 +281,26 @@ main .student-registration {
     grid-template-columns: 1fr;
 }
 
+.back-button {
+    margin-bottom: 10px;
+}
+
+#back-button {
+    padding: 7px;
+    background: none;
+    transition: all 150ms ease;
+    display: flex;
+    border-radius: 50%;
+    background: var(--color-background);
+}
+
+#back-button:hover {
+    background: gray;
+}
+.back-button a:hover {
+    text-decoration: none !important;
+}
+
 main .student-registration > div {
     background: var(--color-white);
     padding: var(--card-padding);
