--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -659,6 +659,66 @@ main .recent-orders-student table {
     transition: all 300ms ease;
 }
 
+.student-view-profile-container {
+    display: grid;
+    grid-template-columns: 2fr 5fr;
+}
+
+.student-view-profile-img-container {
+    display: flex;
+    justify-content: center;
+    align-items:flex-start;
+    padding: 10px 20px;
+
+}
+.student-view-profile-img-container img {
+    width: 90%;
+    border-radius: 50%;
+    border: 3px solid var(--color-primary);
+    padding: 5px;
+}
+
+.student-view-profile-info-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding-top: 20px;
+}
+
+.student-view-profile-info-container .clearance-status-btn-container {
+    margin-top: 15px;
+}
+
+.student-view-profile-info-container .clearance-status-btn-container button {
+    padding: 10px 15px;
+    cursor: pointer;
+    font-size: 1.3rem;
+    font-weight: 550;
+    background: orange;
+    color: black;
+    border-radius: var(--border-radius-1);
+    transition: all 150ms ease;
+}
+
+.student-view-profile-info-container .clearance-status-btn-container button:hover {
+    background: rgb(255, 213, 0);
+    
+}
+
+.student-view-profile-info-container h2.label {
+    font-weight: 600;
+    margin-left: 5px;
+}
+
+.student-info-name-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    
+}
+.student-info-name-container span {
+    margin-bottom: 3px;
+}
 
 .dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter, .dataTables_wrapper .dataTables_info, .dataTables_wrapper .dataTables_processing, .dataTables_wrapper .dataTables_paginate {
     color: var(--color-dark) !important;
@@ -997,10 +1057,17 @@ main table tbody tr td:last-child input, main table tbody tr td:last-child butto
         width: 100%;
         grid-template-columns: 1fr;
     }
-
+    .student-view-profile-container {
+        grid-template-columns: 1fr;
+    }
     .container-student {
         width: 100%;
         grid-template-columns: 1fr;
+    }
+
+    .student-view-profile-img-container img {
+        width: 40%;
+        border-radius: 50%;
     }
 
     aside {
