--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -611,14 +611,98 @@ main .recent-orders-student {
 .add-button-container {
     position: absolute;
     top: 85px;
-    right: 30px;
+    right: 0px;
+    left: 0px;
     z-index: 100;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0px 20px;
+    align-items: center;
 }
 
-#add-new-student {
-    border-radius: var(--border-radius-1);
+.add-button-container form {
+   
+}
+
+.upload-student-csv-container {
+    border: 1.5px solid var(--color-primary-variant);
+    padding: 15px 20px 5px 20px;
+    border-radius: 100px;
+    position: relative;
+    display: flex;
+
+}
+
+.upload-student-csv-container input[type="file"]::-webkit-file-upload-button{
+    display: none;
+
+}
+
+.upload-student-csv-container input[type="file"] {
+    width: 120px;
+    margin: 0px 10px;
+    padding: 0;
     cursor: pointer;
-    padding: 10px 20px;
+    font-weight: 600;
+    transition: all 200ms ease;
+}
+
+.upload-student-csv-container input[type="file"]:hover {
+    color: var(--color-primary);
+}
+
+.upload-student-csv-container label[for="input-file"]{
+    text-decoration: underline;
+    text-underline-offset: 5px;
+    cursor: pointer;
+    transition: all 200ms ease;
+}
+
+.upload-student-csv-container label[for="input-file"]:hover {
+    color: orange;
+}
+
+
+.upload-student-csv-container form .form-input-file-csv-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+
+}
+
+.upload-student-csv-container form .form-input-file-csv-container .submit-csv-file-button {
+    background: none;
+    color: var(--color-dark);
+    display: flex;
+    align-items: center;
+    font-size: 0.9rem;
+    cursor: pointer;
+    transition: all 200ms ease;
+}
+
+.upload-student-csv-container form .form-input-file-csv-container .submit-csv-file-button:hover {
+    color: var(--color-success);
+}
+
+.label-csv {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    top: -10px;
+    color: var(--color-primary);
+    background: var(--color-white);
+    padding: 0px 10px;
+    border-radius: 20px;
+}
+
+
+#add-new-student {
+    border-radius: 100px;
+    cursor: pointer;
+    padding: 15px 20px;
     background: var(--color-primary-variant);
     color: white;
     transition: all 150ms ease;
@@ -652,7 +736,7 @@ main .recent-orders-student table {
     background: var(--color-white);
     width: 100%;
     border-radius: var(--card-border-radius);
-    padding-top: 50px !important;
+    padding-top: 80px !important;
     padding: var(--card-padding);
     text-align: center;
     box-shadow: var(--box-shadow);
@@ -1015,12 +1099,16 @@ main table tbody tr td:last-child input, main table tbody tr td:last-child butto
     }
 
     main table thead tr th:nth-last-child(2),
+    main table thead tr th:nth-child(6),
+    main table thead tr th:nth-last-child(2),
     main table thead tr th:nth-child(6) {
         display: none;
     }
 
     main table tbody tr td:nth-last-child(2),
-    main table tbody tr td:nth-child(6) {
+    main table tbody tr td:nth-child(6),
+    main table tfoot tr th:nth-last-child(2),
+    main table tfoot tr th:nth-child(6) {
         display: none;
     }
 }
