--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -415,7 +415,7 @@ main .student-registration .form .title::before{
     
 }
 
-.input-field input{
+.input-field input {
     position: absolute;
     height: 100%;
     width: 100%;
@@ -430,6 +430,40 @@ main .student-registration .form .title::before{
     color: var(--color-dark);
 }
 
+.input-field label {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    padding: 0 35px;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    border-bottom: 2px solid #ccc;
+    border-top: 2px solid transparent;
+    transition: all 0.2s ease;
+    background: transparent;
+    color: var(--color-dark);
+    
+}
+
+.input-field select{
+    position: absolute;
+    width:100%;
+    height: 100%;
+    padding: 0 35px;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    border-bottom: 2px solid #ccc;
+    border-top: 2px solid transparent;
+    transition: all 0.2s ease;
+    background: transparent;
+    color: var(--color-dark);
+    cursor: pointer;
+}
+
+
+
 .input-field input:is(:focus, :valid){
     border-bottom-color: #4070f4;
 }
@@ -441,6 +475,7 @@ main .student-registration .form .title::before{
     color: #999;
     font-size: 23px;
     transition: all 0.2s ease;
+    z-index: 10;
 }
 
 .input-field input:is(:focus, :valid) ~ i{
