--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,6 +258,11 @@ aside .sidebar .message-count {
     border-radius: var(--border-radius-1);
 }
 
+
+
+
+
+
 /* ================ MAIN ============== */
 
 main {
@@ -564,6 +569,10 @@ main .insights {
     gap: 1.6rem;
 }
 
+main .insights.info {
+    display: grid;
+    grid-template-columns: 1fr;
+}
 
 main .insights > div {
     background: var(--color-white);
@@ -573,6 +582,8 @@ main .insights > div {
     box-shadow: var(--box-shadow);
     transition: all 300ms ease;
 }
+
+
 
 main .insights > div:hover {
     box-shadow: none;
@@ -599,6 +610,41 @@ main .insights > div .middle {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+main .insights > div .clearance-detail {
+    margin-top: 10px;
+    display: grid;
+    grid-template-columns: 2fr 5fr;
+    padding: 10px 30px;
+}
+
+main .insights > div .clearance-detail .left.first-left {
+    border-right: 2px solid var(--color-info-dark);
+}
+
+main .insights > div .clearance-detail > div:nth-child(1) {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.insights.info {
+    margin-bottom: 20px;
+}
+
+.clearance-detail-status-header {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.clearance-detail-status-table-container table {
+    width: 100%;
+    font-size: 1.2rem;
+}
+
+.clearance-detail-status-table-container table tbody tr td {
+    
 }
 
 main .insights h3 {
@@ -682,6 +728,26 @@ main .recent-orders-student {
     gap: 10px;
     align-items: center;
     margin-bottom: 5px;
+    position: relative;
+}
+
+#show-clearance-insights {
+    background: var(--color-warning);
+    padding: 10px 20px; 
+    border-radius: var(--border-radius-1);
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 200ms ease;
+    display: flex;
+    align-items: center;
+}
+
+#show-clearance-insights:hover {
+    background-color: #fac26d;
+}
+
+#clearance-insights {
+    display: none;
 }
 
 .add-button-container form {
@@ -1712,6 +1778,7 @@ main table tbody tr td:last-child input, main table tbody tr td:last-child butto
     border-radius: var(--border-radius-1);
     box-shadow: var(--box-shadow);
     transition: all 200ms ease;
+    margin-bottom: 30px;
 }
 
 .dataTables_wrapper:hover {
