--- a/office_admin/office-admin-style.css
+++ b/office_admin/office-admin-style.css
@@ -416,3 +416,36 @@ span.title {
 }
 
 
+.office-main-container {
+    width: 100%;
+    max-width: 900px;
+    display: flex;
+    flex-direction: column;
+}
+
+.office-main-container .first-div-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+    padding: 10px;
+    background: var(--color-white);
+    border-radius: var(--border-radius-1);
+    padding-top: 50px;
+    box-shadow: var(--box-shadow);
+}
+
+.welcome-top {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.welcome-top h2 {
+    font-size: 2.2rem;
+}
+
+.welcome-top div {
+    font-size: 1.2rem;
+    color: var(--color-dark-variant);
+}
