--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,11 +218,11 @@ aside .sidebar a span {
     transition: all 300ms ease;
 }
 
-aside .sidebar a:last-child {
+/* aside .sidebar a:last-child {
     position: absolute;
     bottom: 2rem;
     width: 100%;
-}
+} */
 
 aside .sidebar a.active {
     background: var(--color-light);
