--- a/assets/css/student-user-style.css
+++ b/assets/css/student-user-style.css
@@ -675,3 +675,66 @@ button {
     z-index: -1;
     opacity: 0.03;
 }
+
+
+
+/* ============ TABS STYLE ============= */
+
+.clearance-tabs-section-container {
+    background: var(--color-white);
+    margin: 20px 0px;
+}
+
+[data-tab-content] {
+    display: none;
+}
+
+.active[data-tab-content] {
+    display: block;
+}
+
+.tabs {
+    display: flex;
+    justify-content: flex-start;
+    list-style-type: none;
+    margin: 0;
+    padding: 5px 0px 5px 20px;
+    border-bottom: 1px solid black;
+    gap: 5px;
+}
+
+.tab {
+    cursor: pointer;
+    padding: 10px 25px;
+    border-radius: 50px;
+    font-weight: 600;
+    font-size: 1.2rem;
+}
+
+.tab.active {
+    color: var(--color-primary);
+    border: 2px solid var(--color-primary);
+}
+
+.tab:hover {
+    background-color: var(--color-dark-variant);
+    color: white;
+}
+
+.tab-content {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.tab-info-container {
+    padding: 20px 0px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.tab-info-insight {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
+}
