--- a/assets/css/student-user-style.css
+++ b/assets/css/student-user-style.css
@@ -176,7 +176,11 @@ b {
     align-items: center;
     padding: 10px 20px 0px 20px;
     width: 100%;
-    
+    box-shadow: var(--box-shadow);
+}
+
+.office-top-container.index-page {
+    box-shadow: none;
 }
 
 .office-container .office-top-container .nav-logo-container {
