--- a/assets/css/student-user-style.css
+++ b/assets/css/student-user-style.css
@@ -742,3 +742,93 @@ button {
     grid-template-columns: 1fr 1fr 1fr;
     gap: 10px;
 }
+
+.clearance-section-container {
+    border: 2px solid var(--color-primary-variant);
+    border-radius: var(--border-radius-3);
+    padding: 0px 20px;
+}
+
+.clearance-header-bar-container {
+    position: relative;
+    padding: 40px 0px 10px 0px;
+    border-bottom: 1px solid black;
+}
+
+.clearance-header-bar-container h3 {
+    text-align: center;
+    padding: 5px 10px;
+    border-radius: 50px;
+    position: absolute;
+    left: 30%;
+    right: 30%;
+    top: -15px;
+    border: 1px solid var(--color-warning);
+    background-color: var(--color-white);
+    font-size: 1.2rem;
+}
+
+.clearance-header-bar-container .clearance-info-table-container {
+    width: 100%;
+}
+
+.clearance-header-bar-container .clearance-info-table-container table {
+    width: 100%;
+    
+}
+
+.clearance-header-bar-container .clearance-info-table-container table tr th {
+    text-align: left;
+}
+
+.clearance-header-bar-container .clearance-info-table-container table thead tr th {
+    color: var(--color-info-dark);
+}
+
+.clearance-header-bar-container .clearance-info-table-container table tbody tr th {
+    font-size: 1.2rem;
+}
+
+
+
+.clearance-details-container {
+    padding: 20px 0px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.clearance-details-container h3 {
+    font-size: 1rem;
+    border-bottom: 2px solid var(--color-primary);
+    width: fit-content;
+}
+
+.clearance-details-table-container {
+    width: 100%;
+    padding: 0px 20px;
+}
+
+.clearance-details-table-container table {
+    width: 100%;
+}
+
+.clearance-details-table-container table tr th {
+    border-bottom: 1px solid black;
+    padding: 10px 0px;
+}
+
+
+
+.clearance-details-table-container table tr th {
+    text-align: left;
+}
+
+.clearance-details-table-container table thead tr th {
+    color: var(--color-info-dark);
+}
+
+.clearance-details-table-container table tbody tr th {
+    font-size: 1.2rem;
+}
+
