--- a/assets/css/student-user-style.css
+++ b/assets/css/student-user-style.css
@@ -760,10 +760,8 @@ button {
     padding: 5px 10px;
     border-radius: 50px;
     position: absolute;
-    left: 30%;
-    right: 30%;
-    top: -15px;
-    border: 1px solid var(--color-warning);
+    
+    top: -18px;
     background-color: var(--color-white);
     font-size: 1.2rem;
 }
@@ -796,12 +794,14 @@ button {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    margin-top: 20px;
 }
 
 .clearance-details-container h3 {
     font-size: 1rem;
     border-bottom: 2px solid var(--color-primary);
     width: fit-content;
+    align-self:center;
 }
 
 .clearance-details-table-container {
@@ -811,9 +811,11 @@ button {
 
 .clearance-details-table-container table {
     width: 100%;
+    border-collapse: separate;
+    border-spacing: 0;
 }
 
-.clearance-details-table-container table tr th {
+.clearance-details-table-container table tr th  {
     border-bottom: 1px solid black;
     padding: 10px 0px;
 }
